/*
 * $Id: ChangeLog,v 1.3139 2004/07/09 11:52:04 likewolf Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2004-07-09 23:55 UTC+0300 Phil Krylov <phil a t newstar.rinet.ru>
  * source/debug/debugger.prg
  * source/debug/dbgtwin.prg
  * source/debug/tbrwtext.prg
    ! Fixed cursor positioning after certain operations.

2004-07-09 15:50 UTC+0300 Phil Krylov <phil a t newstar.rinet.ru>
  * source/debug/debugger.prg
    + Added some missing commands.
    ! Display correct file after changing source file path.
    ! Restore LastKey() and Inkey() before- and afterblocks when evaluating
      expressions.
    * Convenient command history processing.
    * Some code formatting.
  * source/rtl/mouseapi.c
    ! Fixed a typo in a trace message.

2004-07-06 21:39 UTC-0800 Ron Pinkas <ron at xharbour.com>
  * source/compiler/cmdcheck.c
    + Added missing support for /j[HIL file] to match existing -j[HIL file]

2004-07-06 18:34 UTC-0800 Luis Krause Mantilla <lkrausem /*at*/ shaw /*dot*/ ca>
   * doc/en/zipnew.txt
     ! fixed spelling and incorrect specifications in all zip functions

2004-07-06 08:55 UTC+1200 Peter Rees <peter(AT)rees.co.nz>
  * contrib/winprn/tprint.prg
    - fix HB_FUNC_STATIC( DRAWBITMAP ) so StretchDIBits() uses correct co-ords passed

2004-07-02 20:33 UTC-0800 Ron Pinkas <ron at xharbour.com>
  * include/hbpcode.h
  * source/compiler/hbpcode.c
  * source/compiler/genc.c
  * source/compiler/hbfix.c
  * source/vm/hvm.c
    + Added new HB_P_PUSHWITH

  * include/hbexprb.c
  * source/compiler/exproptb.c
    ! Fixed optimization of HB_SetWith() in HB_EA_PUSH_PCODE to push the preset WITH Object using new HB_P_PUSHWITH

  * source/vm/hvm.c
    - Removed no longer needed HB_FUNC( HB_QWITH )

  * source/vm/classes.c
    ! Fixed Error handling in __CLSINSTSUPER() to pass the Class Name argument

  * tests/with.prg